--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "vitest --watch"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
     "dompurify": "^3.0.9",
     "marked": "^12.0.1",
     "react": "^18.2.0",
